--- a/activestructopt/gnn/config.yml
+++ b/activestructopt/gnn/config.yml
@@ -27,9 +27,9 @@ model:
   pre_fc_count: 1
   gc_count: 4
   post_fc_count: 3
-  pool: global_add_pool
+  pool: global_mean_pool
   pool_order: early
-  batch_norm: True
+  batch_norm: False
   batch_track_stats: True
   act: relu
   dropout_rate: 0.0
