--- a/activestructopt/gnn/config.yml
+++ b/activestructopt/gnn/config.yml
@@ -39,7 +39,7 @@ model:
   gradient: False
 
 optim:
-  max_epochs: 100
+  max_epochs: 500
   max_checkpoint_epochs: 0
   lr: 0.001
   # Either custom or from torch.nn.functional library. If from torch, loss_type is TorchLossWrapper
@@ -65,9 +65,9 @@ dataset:
   processed: False
   # Path to data files - this can either be in the form of a string denoting a single path or a dictionary of {train: train_path, val: val_path, test: test_path, predict: predict_path}
   src: {
-    train: 'data/train_data.json', 
-    val: 'data/val_data.json', 
-    test: 'data/test_data.json', 
+    train: '/content/ActiveStructOpt/activestructopt/gnn/data/train_data.json', 
+    val: '/content/ActiveStructOpt/activestructopt/gnn/data/val_data.json', 
+    test: '/content/ActiveStructOpt/activestructopt/gnn/data/test_data.json', 
   }
   
   # Path to target file within data_path - this can either be in the form of a string denoting a single path or a dictionary of {train: train_path, val: val_path, test: test_path} or left blank when the dataset is a single json file
